@@ -12,6 +12,7 @@ module Development.Shake.Internal.Core.Run(
     unsafeExtraThread, unsafeAllowApply,
     parallel,
     orderOnlyAction,
+    batch,
     -- Internal stuff
     runAfter
     ) where
@@ -384,3 +385,45 @@ orderOnlyAction act = Action $ do
     res <- fromAction act
     modifyRW $ \s -> s{localDepends=pre}
     return res
+
+
+batch
+    :: Int
+    -> ((a -> Action ()) -> Rules ())
+    -> (a -> Action b)
+    -> ([b] -> Action ())
+    -> Rules ()
+batch mx pred one many
+    | mx <= 0 = error $ "Can't call batchable with <= 0, you used " ++ show mx
+    | mx == 1 = pred $ \a -> do b <- one a; many [b]
+    | otherwise = do
+        todo :: IORef (Int, [(b, Either SomeException Local -> IO ())]) <- liftIO $ newIORef (0, [])
+        pred $ \a -> Action $ do
+            b <- fromAction $ one a
+            -- optimisation would be to avoid taking the continuation if count >= mx
+            -- but it only saves one pool requeue per mx, which is likely to be trivial
+            -- and the code becomes a lot more special cases
+            global@Global{..} <- getRO
+            local <- getRW
+            local2 <- captureRAW $ \k -> do
+                count <- atomicModifyIORef todo $ \(count, bs) -> ((count+1, (b,k):bs), count+1)
+                -- only trigger on the edge so we don't have lots of waiting pool entries
+                (if count == mx then addPoolResume else if count == 1 then addPoolBatch else none)
+                    globalPool $ go global (localClearMutable local) todo
+            modifyRW $ \root -> localMergeMutable root [local2]
+    where
+        none _ _ = return ()
+
+        go global@Global{..} local todo = do
+            (now, count) <- atomicModifyIORef todo $ \(count, bs) ->
+                if count <= mx then
+                    ((0, []), (bs, 0))
+                else
+                    let (xs,ys) = splitAt mx bs
+                    in ((count - mx, ys), (xs, count - mx))
+            (if count >= mx then addPoolResume else if count > 0 then addPoolBatch else none)
+                    globalPool $ go global local todo
+            unless (null now) $
+                runAction global local (do many $ map fst now; Action getRW) $ \x ->
+                    forM_ now $ \(_,k) ->
+                        (if isLeft x then addPoolException else addPoolResume) globalPool $ k x
