@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #502, add batch function to batch commands with high startup
     Avoid parallel duplicating local state such as discounting
     Prefer to resume tasks rather than start new ones
 0.16
